# wuwa-downloader

./: Cargo.toml  README.md
.github/workflows/: changelog.yml  ci.yml  release.yml
src/: main.rs  structs.rs
