[package]
name = "wuwa-beta-downloader"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
reqwest = { version = "0.12.7", features = ["stream", "json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
tokio-stream = "0.1.15"
